# semantic-field-definition-generator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/SemanticFieldDefinitionGenerator/: generator.py  parser.py  semantic_field_util.py
src/SemanticFieldDefinitionGenerator/templates/: inline.handlebars  json.handlebars  metaphacts.handlebars  researchspace.handlebars  universal.handlebars
